feat: filter post by platform
