# src/controllers/posts.controller.ts
@@ -2,11 +2,12 @@ import { Request, Response } from 'express'
 import { HTTP_STATUS_CODE } from '~/constants/httpStatusCode'
 import postServices from '~/services/posts.services'
 import { ParamsDictionary } from 'express-serve-static-core'
-import { CreatePostRequestBody } from '~/models/request/posts.request'
+import { CreatePostRequestBody, GetPostDetailsParams, GetPostQuery } from '~/models/request/posts.request'
 
-export const getPostsController = async (req: Request, res: Response) => {
+export const getPostsController = async (req: Request<ParamsDictionary, any, any, GetPostQuery>, res: Response) => {
   const ownerId = req.auth?.userId
-  const result = await postServices.getPosts(ownerId as string)
+  const platform = req.query.platform
+  const result = await postServices.getPosts(ownerId as string, platform)
 
   res.status(HTTP_STATUS_CODE.OK).json({
     data: result,
@@ -23,5 +24,15 @@ export const schedulePostController = async (
   await postServices.schedulePost(body, ownerId as string)
   res.status(HTTP_STATUS_CODE.CREATED).json({
     message: 'Create post successfully'
+  })
+}
+
+export const getPostDetailsController = async (req: Request<GetPostDetailsParams>, res: Response) => {
+  const postId = req.params.id
+  const result = await postServices.getPostDetails(postId)
+
+  res.status(HTTP_STATUS_CODE.OK).json({
+    data: result,
+    message: 'Get post details successfully'
   })
 }
