# src/routes/posts.router.ts
@@ -1,12 +1,14 @@
 import { ClerkExpressWithAuth } from '@clerk/clerk-sdk-node'
 import { Router } from 'express'
-import { getPostsController, schedulePostController } from '~/controllers/posts.controller'
+import { getPostsController, schedulePostController, getPostDetailsController } from '~/controllers/posts.controller'
 import { createPostValidator } from '~/middlewares/posts.middleware'
 import { wrapHandleRequest } from '~/utils/handles'
 
 const postsRouter = Router()
 
 postsRouter.get('/', ClerkExpressWithAuth() as any, wrapHandleRequest(getPostsController))
+
+postsRouter.get('/:id', ClerkExpressWithAuth() as any, wrapHandleRequest(getPostDetailsController))
 
 postsRouter.post(
   '/schedule',
